--- a/code-analysis/package.json
+++ b/code-analysis/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "async": "^0.9.0",
-    "lodash": "^3.3.1",
-    "shelljs": "^0.3.0"
+    "lodash": "^3.4.0",
+    "shelljs": "^0.3.0",
+    "simple-statistics": "^0.9.0"
   }
 }
