--- a/code-analysis/package.json
+++ b/code-analysis/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "async": "^0.9.0",
+    "gm": "^1.17.0",
+    "just.randomcolor": "^0.1.1",
     "lodash": "^3.4.0",
     "shelljs": "^0.3.0",
     "simple-statistics": "^0.9.0"
